<resources>
    <string name="app_name">Navigational Components</string>

    <!-- MainActivity -->
    <string name="home">Home</string>
    <string name="settings">Settings</string>+
    <string name="notifications">Notifications</string>

    <!-- Home -->
    <string name="play">Play</string>
    <string name="score_board">Score Board</string>

    <!-- Profile -->
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="save">Save</string>

    <!-- Test -->
    <string name="programming_is_fun">Q: Programming is Fun?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Success -->
    <string name="success">Success</string>

    <!-- Failure -->
    <string name="failure">Failure</string>
    <string name="try_again">Try Again</string>

    <!-- About App -->
    <string name="about_this_app">About this App…</string>
    <string name="info">Info</string>
</resources>